--- a/index.html
+++ b/index.html
@@ -36,45 +36,30 @@
             </th>
           </tr>
         </table>
-        <!-- Simple Textfield -->
+        <!-- Numeric Textfield -->
         <form action="#">
-          <p>Length(cm): </p>
+          <p>Length</p>
           <div class="mdl-textfield mdl-js-textfield">
-            <input
-              class="mdl-textfield__input"
-              type="text"
-              pattern="-?[0-9]*(\.[0-9]+)?"
-              id="length-of-pyramid"
-            />
+            <input class="mdl-textfield__input" type="number" step=".01" id="length-of-pyramid"/>
             <label class="mdl-textfield__label" for="length-of-pyramid"></label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
         <!-- Numeric Textfield -->
         <form action="#">
-          <p>Width(cm): </p>
+          <p>Width</p>
           <div class="mdl-textfield mdl-js-textfield">
-            <input
-              class="mdl-textfield__input"
-              type="text"
-              pattern="-?[0-9]*(\.[0-9]+)?"
-              id="width-of-pyramid"
-            />
+            <input class="mdl-textfield__input" type="number" step=".01" id="width-of-pyramid"/>
             <label class="mdl-textfield__label" for="width-of-pyramid"></label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
         <!-- Numeric Textfield -->
         <form action="#">
-          <p>Height(cm): </p>
+          <p>Height</p>
           <div class="mdl-textfield mdl-js-textfield">
-            <input
-              class="mdl-textfield__input"
-              type="text"
-              pattern="-?[0-9]*(\.[0-9]+)?"
-              id="height-of-pyramid"
-            />
-            <label class="mdl-textfield__label" for="height-of-pyramid"></label>
+            <input class="mdl-textfield__input" type="number" step=".01" id="height-of-pyramid"/>
+            <label class="mdl-textfield__label" for="height-of-pyramid"</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
