--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p>Height</p>
           <div class="mdl-textfield mdl-js-textfield">
             <input class="mdl-textfield__input" type="number" step=".01" id="height-of-pyramid"/>
-            <label class="mdl-textfield__label" for="height-of-pyramid"</label>
+            <label class="mdl-textfield__label" for="height-of-pyramid"></label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
